# macmcleaner

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  macmcleaner.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cleaner/: browser.rs  mod.rs  recycle.rs  system.rs  temp.rs
src-tauri/src/safety/: mod.rs
src-tauri/src/scanner/: mod.rs
src/components/: TermsModal.tsx  WelcomeModal.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Icons.tsx  Modal.tsx  ProgressBar.tsx  Toast.tsx
src/hooks/: useTauri.ts
src/locales/: en.json  es.json
src/pages/: About.tsx  Dashboard.tsx  Results.tsx  Settings.tsx
src/store/: useAppStore.ts
src/styles/: globals.css
src/utils/: format.ts
