[package]
name = "macmcleaner"
version = "1.0.0"
description = "MACMCleaner - Privacy-first system cleaner"
authors = ["Miguel Angel Colorado Marin <contact@miguelacm.es>"]
license = "GPL-3.0-only"
repository = "https://github.com/miguelacm/macmcleaner"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "macmcleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
